software/applications/podinfo/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: podinfo
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/internal-gateway
    - istio-system/external-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: podinfo.podinfo.svc.cluster.local
            port:
              number: 9898
